(WIP) Incorporated frontend and attempted to hook up back end using Axios

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ target/
 !**/src/main/**
 !**/src/test/**
 
+src/main/frontend/node_modules
+
 ### STS ###
 .apt_generated
 .classpath
@@ -29,3 +31,4 @@ build/
 
 ### VS Code ###
 .vscode/
+
